<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Finger Compatibility</string>
    <string name="r1">Passionate attraction to one another is strong and delicious. You are destined to live great moments of passion.</string>
	<string name="r2">Although you don\'t want to show it, you are completely drawn to each other. live and enjoy the moment.</string>
	<string name="r3">A lively and combative Relationship where there is no room for boredom is about to born. You are an energetic couple.</string>
    <string name="r4">You feel a mutual fascination, you radiate positive energy and passion when you are together.</string>
    <string name="r5">You were born to be together. A union based on balance and respect that can be very durable.</string>
    <string name="r6">No matter what you tell yourselves, the sexual energies between you are highly charged.</string>
	<string name="autres_app">Other App</string>
	<string name="about_button">About</string>
	<string name="settings_label">Settings</string>
	<string name="settings_explainations">Set your own result: </string>
	<string name="explication">Both of the users must hold one finger in the same time in the two scan areas to enable the analysis. </string>
	<string name="start">Start</string>
	<string name="share">Share</string>
	<string name="share_message">Have a lot of fun with a great fingerprint scanner, Fingerprint Compatibility: </string>
</resources>
