<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:ads="http://schemas.android.com/apk/lib/com.google.ads"
  android:orientation="vertical"
  android:layout_width="fill_parent"
  android:layout_height="fill_parent"
  android:id="@+id/homeLayout">
  
  	<RelativeLayout 
        android:id="@+id/homeInnerRelativeLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true" 
        android:layout_centerHorizontal="true">
        
        <TextView  
		    android:layout_width="fill_parent" 
		    android:layout_height="wrap_content" 
		    android:text="@string/explication"
		    android:gravity="center"
		    android:background="@drawable/nine_rouge"
		    style="@style/WhiteBoldText" 
		    android:layout_margin="2dip"
		    android:paddingTop="10dip"
		    android:paddingBottom="10dip"/>
		    
		
    </RelativeLayout>
    
    <RelativeLayout 
        android:id="@+id/buttonInnerRelativeLayout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/homeInnerRelativeLayout">
    
		<ImageView android:layout_height="wrap_content"
				   android:layout_width="wrap_content" 
				   android:src="@drawable/illustration" 
				   android:id="@+id/illustration" 
				   android:layout_marginTop="2dp"
				   android:gravity="center"
				   android:layout_centerHorizontal="true" />
				   
		<Button 
			android:layout_height="wrap_content" 
			android:layout_width="fill_parent"
			android:id="@+id/button_start" 
			android:text="@string/start"
			android:layout_margin="2dip"
			android:layout_below="@id/illustration"
			android:layout_centerHorizontal="true" />
			
		<Button 
			android:layout_height="wrap_content" 
			android:layout_width="fill_parent"
			android:id="@+id/button_settings" 
			android:text="@string/settings_label"
			android:layout_margin="2dip"
			android:layout_below="@id/button_start"
			android:layout_centerHorizontal="true" />
			
		<Button 
			android:layout_height="wrap_content" 
			android:layout_width="fill_parent"
			android:id="@+id/button_otherApps" 
			android:text="@string/autres_app"
			android:layout_margin="2dip"
			android:layout_below="@id/button_settings"
			android:layout_centerHorizontal="true" />
		<Button 
			android:layout_height="wrap_content" 
			android:layout_width="fill_parent"
			android:id="@+id/button_share" 
			android:text="@string/share"
			android:layout_margin="2dip"
			android:layout_below="@id/button_otherApps"
			android:layout_centerHorizontal="true" />
			
	 </RelativeLayout>
	
     <RelativeLayout 
        android:id="@+id/homeInnerRelativeLayoutAd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true" 
        android:layout_centerHorizontal="true">
		  
		<com.google.ads.AdView android:id="@+id/adView"
	                       android:layout_width="wrap_content"
	                       android:layout_height="wrap_content"
	                       ads:adUnitId="a14e412383caa5b"
	                       ads:adSize="BANNER"
	                       ads:loadAdOnCreate="true"/>
		  
    </RelativeLayout>
	  
  </RelativeLayout>